--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,12 @@
     <dependency>
       <groupId>org.seleniumhq.selenium</groupId>
       <artifactId>selenium-java</artifactId>
-      <version>4.20.0</version>
+      <version>4.22.0</version> </dependency>
+
+    <dependency>
+        <groupId>org.seleniumhq.selenium</groupId>
+        <artifactId>selenium-devtools-v126</artifactId>
+        <version>4.22.0</version>
     </dependency>
 
     <dependency>
@@ -29,17 +34,27 @@
         <version>7.9.0</version>
         <scope>test</scope>
     </dependency>
+
     <dependency>
         <groupId>com.aventstack</groupId>
         <artifactId>extentreports</artifactId>
         <version>5.1.1</version>
     </dependency>
+    
     <dependency>
-    <groupId>io.rest-assured</groupId>
+        <groupId>io.rest-assured</groupId>
         <artifactId>rest-assured</artifactId>
         <version>5.4.0</version>
         <scope>test</scope>
     </dependency>
+
+    <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-simple</artifactId>
+        <version>2.0.13</version>
+        <scope>test</scope>
+    </dependency>
+
   </dependencies>
 
   <build>
@@ -48,7 +63,6 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.13.0</version>
       </plugin>
-
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
@@ -61,5 +75,4 @@
       </plugin>
     </plugins>
   </build>
-
 </project>
